<resources>

    <string name="app_name">RegisterS</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_register">注册</string>
    <string name="button_login">登录</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="button_sure">确认</string>
    <string name="button_cancel">取消</string>
    <string name="email">邮件</string>
    <string name="nickname">昵称</string>
    <string name="password">密码</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome_validated_user">欢迎您</string>
    <string name="setphoto">设置头像</string>

</resources>